crates/config/tests/snapshots/file_blank_lines_only.snap
---
source: crates/config/tests/snapshots.rs
---
# file-blank-lines-only

## Input

```mical






```

## JSON

```json
{}
```

vim:ft=markdown
