crates/config/tests/snapshots/file_comment_only.snap
---
source: crates/config/tests/snapshots.rs
---
# file-comment-only

## Input

```mical
# comment1
# comment2

```

## JSON

```json
{}
```

vim:ft=markdown
