crates/config/tests/snapshots/file_directive_only.snap
---
source: crates/config/tests/snapshots.rs
---
# file-directive-only

## Input

```mical
#version 1
#format on

```

## JSON

```json
{}
```

vim:ft=markdown
