crates/config/tests/snapshots/file_empty.snap
---
source: crates/config/tests/snapshots.rs
---
# file-empty

## Input

```mical

```

## JSON

```json
{}
```

vim:ft=markdown
