crates/config/tests/snapshots/file_newline.snap
---
source: crates/config/tests/snapshots.rs
---
# file-newline

## Input

```mical


```

## JSON

```json
{}
```

vim:ft=markdown
