crates/config/tests/snapshots/file_space_only.snap
---
source: crates/config/tests/snapshots.rs
---
# file-space-only

## Input

```mical
 
```

## JSON

```json
{}
```

vim:ft=markdown
