crates/config/tests/snapshots/file_spaces_only.snap
---
source: crates/config/tests/snapshots.rs
---
# file-spaces-only

## Input

```mical
    
```

## JSON

```json
{}
```

vim:ft=markdown
